Fixed spacing in quotes

--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,7 @@ p, a, button, span {
 
 p {
   line-height: 4rem;
-  margin: 3rem 10rem;
-  padding-bottom: 2rem;
-  border-bottom: 4px dotted black;
+  margin: 1rem 10rem;
 }
 
 @media (max-width: 500px) {
@@ -116,4 +114,9 @@ footer {
 footer p {
   border: none;
   margin: 1rem;
+}
+
+.itemBox {
+  border-bottom: 4px dotted black;
+  padding: 2rem;
 }
